--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -1,3 +1,15 @@
+.city-list {
+    border-radius: 12px;
+    margin: 1rem auto;
+    padding: 1rem;
+    background-color: var(--clr-card-bg);
+    backdrop-filter: blur(2px);
+    color: var(--clr-white);
+    box-shadow: var(--shadow-medium);
+    width: 400px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
 .list-title {
   font-size: var(--fs-24);
   font-weight: var(--fw-bold);
