--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -7,7 +7,7 @@
 
 .weather-app-container::before {
   content: '';
-  background: url('../pictures/1540005.jpg') no-repeat center center/cover;
+  background: url('../../pictures/1540005.jpg') no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -22,6 +22,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.weather-app-title {
+  font-size: var(--fs-32);
+}
+
+.weather-app-desc {
+  font-size: var(--fs-24);
 }
 
 .error-message {
