--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -54,3 +54,26 @@
   font-style: italic;
 }
 
+@media (max-width: 500px) {
+    .city-list {
+        width: 80vw; 
+        max-width: none; 
+        margin: 1rem 5vw; 
+        padding: 0.75rem; 
+    }
+
+    .list-title {
+        font-size: var(--fs-24); 
+        margin-bottom: 0.75rem;
+    }
+
+    .list-info {
+        flex-direction: column; 
+        gap: 0.25rem; 
+    }
+
+    .list-temp, .list-weather, .list-name {
+        font-size: var(--fs-16);
+    }
+
+}
